--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,45 @@
 on:
-  pull_request:
-    branches:
-      - main
-      - master
   push:
     branches:
       - main
       - master
-      # - develop
+  pull_request:
+    branches:
+      - main
+      - master
+
 name: "Build & Release"
+
 jobs:
   build:
     name: Build & Release
-    runs-on: windows-latest #macos-latest   #this is for IOS
+    runs-on: windows-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v3
         with:
           distribution: "zulu"
-          java-version: "12"
-      - uses: subosito/flutter-action@v2
+          java-version: "17" # ✅ FIXED
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
         with:
           channel: "stable"
           architecture: x64
 
-      - run: flutter build apk --release --split-per-abi
-      - run: |
-          flutter build ios --no-codesign
-          cd build/ios/iphoneos
-          mkdir Payload
-          cd Payload
-          ln -s ../Runner.app
-          cd ..
-          zip -r app.ipa Payload
-      - name: Push to Releases
+      - name: Get dependencies
+        run: flutter pub get
+
+      - name: Build release APK
+        run: flutter build apk --release --split-per-abi
+
+      - name: Upload release to GitHub
         uses: ncipollo/release-action@v1
         with:
-          artifacts: "build/app/outputs/apk/release/*,build/ios/iphoneos/app.ipa"
+          artifacts: "build/app/outputs/apk/release/*"
           tag: v1.0.${{ github.run_number }}
           token: ${{ secrets.TOKEN }}
-# push to master, main, develop
-# pull request on main master
