--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,5 @@ jobs:
         with:
           allowUpdates: true
           artifacts: "build/app/outputs/apk/release/*"
-          tag: v1.0.${{ github.run_number }}
+          tag: build-${{ github.run_id }}
           token: ${{ secrets.TOKEN }}
