--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,11 +37,12 @@ dependencies:
   # for Chat  firebase package
   firebase_core: ^3.0.0
   cloud_firestore: ^5.0.0
-  firebase_messaging: ^15.0.0
+  firebase_messaging: ^15.2.10
   firebase_auth: ^5.7.0
   shared_preferences: ^2.5.3
   get: ^4.7.2
   flutter_easyloading: ^3.0.5
+  overlay_support: ^2.1.0
   # ------------ Firebase require packages---
 
 dev_dependencies:
